--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                   "
                 >
                   <img
-                    src="图片/2309.jpeg"
+                    src="https://imgse.com/i/pV3V7vj"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
