--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   "
                 >
                   <img
-                    src="图片/833-11.3.jpeg"
+                    src="https://s21.ax1x.com/2025/07/17/pV3V7vj.jpg"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
