--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                   "
                 >
                   <img
-                    src="图片/833-11.2.jpeg"
+                    src="https://s21.ax1x.com/2025/07/17/pV3nNRO.jpg"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
