--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                   "
                 >
                   <img
-                    src="图片/66ee8abe000c8b22177655ca3161b01e000000a100004f50.jfif"
+                    src="https://s21.ax1x.com/2025/07/18/pV3d5gH.jpg"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
@@ -386,7 +386,7 @@
                   "
                 >
                   <img
-                    src="图片/66ee8abe000c8b22177655ca3161b01e000000a100004f50.jfif"
+                    src="https://s21.ax1x.com/2025/07/18/pV3dIvd.jpg"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
@@ -405,7 +405,7 @@
                   "
                 >
                   <img
-                    src="图片/66ee8abe0002d7c51b2844232c06bd1e000000a100004f50.jfif"
+                    src="https://s21.ax1x.com/2025/07/18/pV3dTKA.jpg"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
@@ -424,7 +424,7 @@
                   "
                 >
                   <img
-                    src="图片/F6611.jpeg"
+                    src="https://s21.ax1x.com/2025/07/18/pV3d7DI.jpg"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
@@ -443,7 +443,7 @@
                   "
                 >
                   <img
-                    src="图片/1322.jpeg"
+                    src="https://s21.ax1x.com/2025/07/18/pV3dHbt.jpg"
                     alt=""
                     style="height: 100%; width: 100%"
                   />
